; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_charset.c_mysqlnd_mbcharlen_gb18030.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_charset.c_mysqlnd_mbcharlen_gb18030.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mysqlnd_mbcharlen_gb18030 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mysqlnd_mbcharlen_gb18030(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp ule i32 %4, 255
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @is_gb18030_odd(i32 %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %2, align 4
  br label %35

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = icmp ugt i32 %13, 65535
  br i1 %14, label %21, label %15

15:                                               ; preds = %12
  %16 = load i32, i32* %3, align 4
  %17 = lshr i32 %16, 8
  %18 = and i32 %17, 255
  %19 = call i32 @is_gb18030_odd(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %15, %12
  store i32 0, i32* %2, align 4
  br label %35

22:                                               ; preds = %15
  %23 = load i32, i32* %3, align 4
  %24 = and i32 %23, 255
  %25 = call i64 @is_gb18030_even_2(i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  store i32 2, i32* %2, align 4
  br label %35

28:                                               ; preds = %22
  %29 = load i32, i32* %3, align 4
  %30 = and i32 %29, 255
  %31 = call i64 @is_gb18030_even_4(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  store i32 4, i32* %2, align 4
  br label %35

34:                                               ; preds = %28
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %33, %27, %21, %6
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @is_gb18030_odd(i32) #1

declare dso_local i64 @is_gb18030_even_2(i32) #1

declare dso_local i64 @is_gb18030_even_4(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
